263_aks_agc_waf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: demo
spec:
  selector: { app: app }
  ports:
    - port: 80
