263_aks_agc_waf/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: demo
spec:
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: app
          port: 80
